Organizando los items en carpetas

--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
     <!--box icons-->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
@@ -39,24 +39,24 @@
                 for design and programming to bring attractive and functional websites to life. Explore my portfolio and
                 discover how my experience can bring value to your projects!"</p>
 
-            <div class="social-media">
-                <a href="#"><i class='bx bxl-facebook'></i></a>
-                <a href="#"><i class='bx bxl-linkedin'></i></a>
-                <a href="#"><i class='bx bxl-github'></i></a>
-                <a href="#"><i class='bx bxl-whatsapp'></i></a>
-            </div>
-            <a href="#" class="btn">Contact me at</a>
+        <div class="social-media">
+            <a href="https://www.linkedin.com/in/daniel-celis-834a2325b" target="_blank"><i class='bx bxl-linkedin'></i></a>
+            <a href="https://github.com/celissss20" target="_blank"><i class='bx bxl-github'></i></a>
+            <a href="https://wa.me/+573222847133"><i class='bx bxl-whatsapp' target="_blank"></i></a>
+        </div>
+
+        <a href="#contact" class="btn">Contact me at</a>
         </div>
 
         <div class="home-img">
-            <img src="assets/foto_home_p.png" alt="Imagen Home">
+            <img src="../assets/foto_home_p.png" alt="Imagen Home">
         </div>
     </section>
 
     <!--About me section-->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="assets\foto_home_p.png" alt="About me image">
+            <img src="../assets/foto_home_p.png" alt="About me image">
         </div>
 
         <div class="about-content">
@@ -85,7 +85,7 @@
                 <li class="item">
                     <a href="#skills">
                         <div class="div-icon">
-                            <img class="icon-img" src="assets/HTML-icon.png" alt="HTML icon">
+                            <img class="icon-img" src="../assets/HTML-icon.png" alt="HTML icon">
                             <div class="icon-text">HTML</div>
                         </div>
                     </a>
@@ -95,7 +95,7 @@
                 <li class="item">
                     <a href="#skills">
                         <div class="div-icon">
-                            <img class="icon-img" src="assets/CSS-icon.png" alt="Css icon">
+                            <img class="icon-img" src="../assets/CSS-icon.png" alt="Css icon">
                             <div class="icon-text">Css</div>
                         </div>
                     </a>
@@ -105,7 +105,7 @@
                 <li class="item">
                     <a href="#skills">
                         <div class="div-icon">
-                            <img class="icon-img" src="assets/Sass-icon.png" alt="Sass icon">
+                            <img class="icon-img" src="../assets/Sass-icon.png" alt="Sass icon">
                             <div class="icon-text">Sass</div>
                         </div>
                     </a>
@@ -114,7 +114,7 @@
                 <li class="item">
                     <a href="#skills">
                         <div class="div-icon">
-                            <img class="icon-img" src="assets/JavaScript-icon.png" alt="JavaScript icon">
+                            <img class="icon-img" src="../assets/JavaScript-icon.png" alt="JavaScript icon">
                             <div class="icon-text">JavaScript</div>
                         </div>
                     </a>
@@ -123,7 +123,7 @@
                 <li class="item">
                     <a href="#skills">
                         <div class="div-icon">
-                            <img class="icon-img" src="assets/java_icon.png" alt="Java icon">
+                            <img class="icon-img" src="../assets/java_icon.png" alt="Java icon">
                             <div class="icon-text">Java</div>
                         </div>
                     </a>
@@ -132,7 +132,7 @@
                 <li class="item">
                     <a href="#skills">
                         <div class="div-icon">
-                            <img class="icon-img" src="assets/Git-icon.png" alt="Git icon">
+                            <img class="icon-img" src="../assets/Git-icon.png" alt="Git icon">
                             <div class="icon-text">GitHub</div>
                         </div>
                     </a>
@@ -141,7 +141,7 @@
                 <li class="item">
                     <a href="#skills">
                         <div class="div-icon">
-                            <img class="icon-img" src="assets/Bootstrap-icon.png" alt="Bootstrap icon">
+                            <img class="icon-img" src="../assets/Bootstrap-icon.png" alt="Bootstrap icon">
                             <div class="icon-text">Bootstrap</div>
                         </div>
                     </a>
@@ -150,7 +150,7 @@
                 <li class="item">
                     <a href="#skills">
                         <div class="div-icon">
-                            <img class="icon-img" src="assets/react-icon.png" alt="ReactJs icon">
+                            <img class="icon-img" src="../assets/react-icon.png" alt="ReactJs icon">
                             <div class="icon-text">ReactJs</div>
                         </div>
                     </a>
@@ -160,7 +160,7 @@
     </section>
 
     <!--Proyects section-->
-    <script src="scripts.js"></script>
+    <script src="../javascript/scripts.js"></script>
 </body>
 
 </html>
