--- a/html/index.html
+++ b/html/index.html
@@ -52,7 +52,7 @@
       <div class="home-content">
         <h3>Hola, soy</h3>
         <h1>Daniel Celis</h1>
-        <h3>Y yo soy un <span>Desarrollador FrontEnd</span></h3>
+        <h3>Soy un <span>Desarrollador FrontEnd</span></h3>
         <p>
           ¡Bienvenido a mi portafolio web! Aquí encontrarás una muestra de mi
           trabajo, donde he combinado mi pasión por el diseño y la programación
@@ -362,7 +362,7 @@
     </section>
   </body>
 
-  
+
   <script src="../javascript/scripts.js"></script>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
