--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="../css/home.css" />
     <link rel="stylesheet" href="../css/aboutMe.css" />
     <link rel="stylesheet" href="../css/skills.css" />
