--- a/index.html
+++ b/index.html
@@ -330,12 +330,12 @@
 
     <!--Seccion de contactos-->
     <section class="contact" id="contact">
-      <h2 class="heading">Contactate  <span>conmigo!</span></h2>
-
-      <form action="#">
+      <h2 class="heading">¡Contácte <span>Conmigo!</span></h2>
+    
+      <form action="https://formspree.io/f/xpzggaeo" method="POST">
         <div class="input-box">
-          <input type="text" placeholder="Nombre completo" required />
-          <input type="email" placeholder="Correo electrónico" required />
+          <input type="text" name="nombre" placeholder="Nombre completo" autocomplete="off" required />
+          <input type="email" name="_replyto" placeholder="Correo electrónico" autocomplete="off" required />
         </div>
         <div class="input-box">
           <input
@@ -345,19 +345,12 @@
             placeholder="Número de teléfono"
             onkeypress="return event.charCode >= 48 && event.charCode <= 57"
             title="Formato esperado: ##########"
+            autocomplete="off"
             required
           />
-
-          <input type="text" placeholder="Asunto del correo" required />
+          <input type="text" name="asunto" placeholder="Asunto del correo" autocomplete="off" required />
         </div>
-        <textarea
-          name=""
-          id=""
-          cols="30"
-          rows="10"
-          placeholder="Your message"
-          required
-        ></textarea>
+        <textarea name="mensaje" cols="30" rows="10" placeholder="Tu mensaje" autocomplete="off" required></textarea>
         <input type="submit" value="Enviar mensaje" class="btn" />
       </form>
     </section>
@@ -400,4 +393,5 @@
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"
   ></script>
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
 </html>
