--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
 
       <div class="about-content">
         <h2 class="heading">Sobre <span>Mí</span></h2>
-        <h3>Desarrollador FrontEnd</h3>
         <p>
           Soy un ingeniero de sistemas con una pasión por el desarrollo
           front-end, mi atención se centra en la creación de interfaces de
@@ -278,6 +277,51 @@
                     </div>
                   </div>
                 </div>
+
+                <!-- Primer proyecto -->
+                <div class="proyects-box react html css javascript">
+                  <img
+                    src="../assets/pro-react-traba.png"
+                    alt="Proyecto react"
+                  />
+                  <div class="proyects-layer">
+                    <h4>Gestión de empleados</h4>
+
+                    <div class="proyect-icon">
+                      <span class="pro-span" id="react-color">
+                        <i class="bx bxl-react"></i>React
+                      </span>
+                      <span class="pro-span" id="html-color">
+                        <i class="bx bxl-html5"></i>Html
+                      </span>
+                      <span class="pro-span" id="css-color">
+                        <i class="bx bxl-css3"></i>Css
+                      </span>
+                      <span class="pro-span" id="script-color">
+                        <i class="bx bxl-javascript"></i>JavaScript
+                      </span>
+                    </div>
+                    <p>
+                      Aplicación en React para gestionar empleados y áreas
+                      laborales con personalización de colores. Función de
+                      marcado de favoritos para accesos rápidos.
+                    </p>
+                    <div class="proyects-links">
+                      <a
+                        href="https://org-weld-omega.vercel.app/"
+                        target="_blank"
+                      >
+                        <i class="bx bx-link-external"></i
+                      ></a>
+                      <a
+                        href="https://github.com/celissss20/proyecto_org.git"
+                        target="_blank"
+                        ><i class="bx bxl-github"></i
+                      ></a>
+                    </div>
+                  </div>
+                </div>
+
               </div>
 
               <!--Botones del carrusel-->
