--- a/index.html
+++ b/index.html
@@ -228,12 +228,7 @@
       </div>
 
       <div class="proyects-container">
-        <!--Inicio de Carrusel-->
-
-        <div id="carouselExampleIndicators" class="carousel slide">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <div class="carrusel1">
+        
                 <!-- Primer proyecto -->
                 <div class="proyects-box react html css javascript">
                   <img
@@ -322,53 +317,95 @@
                   </div>
                 </div>
 
-              </div>
+                <!-- Primer proyecto -->
+                <div class="proyects-box react html css javascript">
+                  <img
+                    src="../assets/pro-react-traba.png"
+                    alt="Proyecto react"
+                  />
+                  <div class="proyects-layer">
+                    <h4>Gestión de empleados</h4>
 
-              <!--Botones del carrusel-->
-              <button
-                id="btn-carrusel"
-                class="carousel-control-prev"
-                type="button"
-                data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="prev"
-              >
-                <span
-                  class="carousel-control-prev-icon"
-                  aria-hidden="true"
-                ></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
+                    <div class="proyect-icon">
+                      <span class="pro-span" id="react-color">
+                        <i class="bx bxl-react"></i>React
+                      </span>
+                      <span class="pro-span" id="html-color">
+                        <i class="bx bxl-html5"></i>Html
+                      </span>
+                      <span class="pro-span" id="css-color">
+                        <i class="bx bxl-css3"></i>Css
+                      </span>
+                      <span class="pro-span" id="script-color">
+                        <i class="bx bxl-javascript"></i>JavaScript
+                      </span>
+                    </div>
+                    <p>
+                      Aplicación en React para gestionar empleados y áreas
+                      laborales con personalización de colores. Función de
+                      marcado de favoritos para accesos rápidos.
+                    </p>
+                    <div class="proyects-links">
+                      <a
+                        href="https://org-weld-omega.vercel.app/"
+                        target="_blank"
+                      >
+                        <i class="bx bx-link-external"></i
+                      ></a>
+                      <a
+                        href="https://github.com/celissss20/proyecto_org.git"
+                        target="_blank"
+                        ><i class="bx bxl-github"></i
+                      ></a>
+                    </div>
+                  </div>
+                </div>
 
-              <button
-                id="btn-carrusel"
-                class="carousel-control-next"
-                type="button"
-                data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="next"
-              >
-                <span
-                  class="carousel-control-next-icon"
-                  aria-hidden="true"
-                ></span>
-                <span class="visually-hidden">Next</span>
-              </button>
+                <!-- Primer proyecto -->
+                <div class="proyects-box react html css javascript">
+                  <img
+                    src="../assets/pro-react-traba.png"
+                    alt="Proyecto react"
+                  />
+                  <div class="proyects-layer">
+                    <h4>Gestión de empleados</h4>
 
-              <!--Indicadores del carrusel-->
-              <div class="carousel-indicators">
-                <button
-                  type="button"
-                  data-bs-target="#carouselExampleIndicators"
-                  data-bs-slide-to="0"
-                  class="active"
-                  aria-current="true"
-                  aria-label="Slide 1"
-                ></button>
+                    <div class="proyect-icon">
+                      <span class="pro-span" id="react-color">
+                        <i class="bx bxl-react"></i>React
+                      </span>
+                      <span class="pro-span" id="html-color">
+                        <i class="bx bxl-html5"></i>Html
+                      </span>
+                      <span class="pro-span" id="css-color">
+                        <i class="bx bxl-css3"></i>Css
+                      </span>
+                      <span class="pro-span" id="script-color">
+                        <i class="bx bxl-javascript"></i>JavaScript
+                      </span>
+                    </div>
+                    <p>
+                      Aplicación en React para gestionar empleados y áreas
+                      laborales con personalización de colores. Función de
+                      marcado de favoritos para accesos rápidos.
+                    </p>
+                    <div class="proyects-links">
+                      <a
+                        href="https://org-weld-omega.vercel.app/"
+                        target="_blank"
+                      >
+                        <i class="bx bx-link-external"></i
+                      ></a>
+                      <a
+                        href="https://github.com/celissss20/proyecto_org.git"
+                        target="_blank"
+                        ><i class="bx bxl-github"></i
+                      ></a>
+                    </div>
+                  </div>
+                </div>
 
-              </div>
-
-            </div>
-          </div>
-        </div>
+            
       </div>
     </section>
 
