Cambio de hoja de vida

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
         </p>
 
         <a
-          href="assets/CV-Daniel-Celis.pdf"
-          download="assets/CV-Daniel-Celis.pdf"
+          href="assets\DANIEL_ALEJANDRO_CELIS_CALDERON _CV.pdf"
+          download="DANIEL_ALEJANDRO_CELIS_CALDERON _CV.pdf"
           class="btn"
           >Descargar CV</a
         >
