Adicion de proyecto barberia

--- a/index.html
+++ b/index.html
@@ -273,6 +273,42 @@
                   </div>
                 </div>
 
+      <!-- Segundo proyecto -->
+      <div class="proyects-box html css ">
+        <img
+          src="../assets/BarberiaPractica.png"
+          alt="Proyecto barberia"
+        />
+        <div class="proyects-layer">
+          <h4>Proyecto barberia</h4>
+
+          <div class="proyect-icon">
+            <span class="pro-span" id="html-color">
+              <i class="bx bxl-html5"></i>Html
+            </span>
+            <span class="pro-span" id="css-color">
+              <i class="bx bxl-css3"></i>Css
+            </span>
+          </div>
+          <p>
+            La página web que he creado es para una barbería e incluye tres secciones principales: la página de inicio, donde los visitantes pueden conocer más sobre la barbería y sus servicios; la sección de productos, que muestra los artículos disponibles para la venta y la sección de contacto, donde los clientes un formulario para comunicarse.
+          </p>
+          <div class="proyects-links">
+            <a
+              href="https://practica-barberia.vercel.app/"
+              target="_blank"
+            >
+              <i class="bx bx-link-external"></i
+            ></a>
+            <a
+              href="https://github.com/celissss20/Barberia_practica"
+              target="_blank"
+              ><i class="bx bxl-github"></i
+            ></a>
+          </div>
+        </div>
+      </div>          
+
       </div>
     </section>
 
