Cambio de proyecto a flexbox (quite barberia)

--- a/index.html
+++ b/index.html
@@ -276,11 +276,11 @@
       <!-- Segundo proyecto -->
       <div class="proyects-box html css ">
         <img
-          src="../assets/BarberiaPractica.png"
-          alt="Proyecto barberia"
+          src="../assets/flexbox.png"
+          alt="Proyecto flexbox"
         />
         <div class="proyects-layer">
-          <h4>Proyecto barberia</h4>
+          <h4>Proyecto flexbox</h4>
 
           <div class="proyect-icon">
             <span class="pro-span" id="html-color">
@@ -291,17 +291,17 @@
             </span>
           </div>
           <p>
-            La página web que he creado es para una barbería e incluye tres secciones principales: la página de inicio, donde los visitantes pueden conocer más sobre la barbería y sus servicios; la sección de productos, que muestra los artículos disponibles para la venta y la sección de contacto, donde los clientes un formulario para comunicarse.
+            La página web que he diseñado consta de una simulacion de un sitio de cursos web, pero su objetivo principal es mostrar el uso de felxbox para la organización de todos los elementos de la pagina, por lo que tambien cuenta con un diseño responsivo.
           </p>
           <div class="proyects-links">
             <a
-              href="https://practica-barberia.vercel.app/"
+              href="https://practica-flex-box.vercel.app/"
               target="_blank"
             >
               <i class="bx bx-link-external"></i
             ></a>
             <a
-              href="https://github.com/celissss20/Barberia_practica"
+              href="https://github.com/celissss20/Curso_FlexBox"
               target="_blank"
               ><i class="bx bxl-github"></i
             ></a>
