Organizacion resposive 768px home

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           trabajo, donde he combinado mi pasión por el diseño y la programación
           para dar vida a sitios web atractivos y funcionales. Explora mi
           portfolio y descubre cómo mi experiencia puede aportar valor a tus
-          proyectos".
+          proyectos.
         </p>
 
         <div class="social-media">
