Integracion de boton de idomas (falta funcionalidad)

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
       <a href="#" class="logo">Portafolio</a>
 
        <!--BOTON DE IDIOMAS-->
-      <button class="btnLeguaje">
-       
+      <button id="btnLeguaje" data-lenguage="spanish">
         <img src="assets\lenESP.png" 
         alt="Spanish">
         <span id="spanL">ESP</span> 
